# AutoML

./: README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  test.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: Electricity.csv  Salaries.csv
tools/: all_tools.py
utils/: before_model.py  details.py  external_test.py  feature_importance.py  hyperparameter.py  model_selection.py  prediction.py  preprocessing.py  read_csv_file.py  visualize_data.py
