[project]
name = "auto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.4",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "catboost>=1.2.0",
    "lightgbm>=3.3.0",
    "numpy>=1.23.0",
]
